[project]
name = "findskel"
dynamic = ["version"]
description = ""
authors = [
    {name = "Jet-Logic"}
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "findskel.__init__.__version__"}

[tool.black]
line-length = 127